spot instance training, disable profiling

--- a/02_sagemaker-pipelines-preprocess-train-evaluate-batch-transform.ipynb
+++ b/02_sagemaker-pipelines-preprocess-train-evaluate-batch-transform.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,9 +114,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s3://sagemaker-eu-central-1-559317267498/abalone/abalone-dataset.csv\n"
+     ]
+    }
+   ],
    "source": [
     "local_path = \"data/abalone-dataset.csv\"\n",
     "\n",
@@ -142,9 +150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s3://sagemaker-eu-central-1-559317267498/abalone/abalone-dataset-batch\n"
+     ]
+    }
+   ],
    "source": [
     "local_path = \"data/abalone-dataset-batch\"\n",
     "\n",
